--- a/Version2/A1_Mapper_V2.ipynb
+++ b/Version2/A1_Mapper_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "4f1c9587-3c13-4c26-831b-a4e8611a7aab",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "288625ad-d70a-474c-948c-4c811ba43991",
    "metadata": {},
    "outputs": [
@@ -95,98 +95,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.206134</td>\n",
-       "      <td>1.156468</td>\n",
-       "      <td>-0.343362</td>\n",
-       "      <td>0.871624</td>\n",
-       "      <td>0.178216</td>\n",
-       "      <td>-0.547987</td>\n",
-       "      <td>-1.144816</td>\n",
-       "      <td>1.637635</td>\n",
-       "      <td>-1.445018</td>\n",
-       "      <td>-0.690324</td>\n",
-       "      <td>1.343545</td>\n",
-       "      <td>-0.460481</td>\n",
-       "      <td>-1.554677</td>\n",
-       "      <td>-0.153782</td>\n",
-       "      <td>-0.614936</td>\n",
-       "      <td>0.356794</td>\n",
+       "      <td>0.206271</td>\n",
+       "      <td>1.155249</td>\n",
+       "      <td>-0.343607</td>\n",
+       "      <td>0.872600</td>\n",
+       "      <td>0.179294</td>\n",
+       "      <td>-0.548440</td>\n",
+       "      <td>-1.143591</td>\n",
+       "      <td>1.636276</td>\n",
+       "      <td>-1.443710</td>\n",
+       "      <td>-0.690973</td>\n",
+       "      <td>1.342454</td>\n",
+       "      <td>-0.459246</td>\n",
+       "      <td>-1.553617</td>\n",
+       "      <td>-0.153883</td>\n",
+       "      <td>-0.615475</td>\n",
+       "      <td>0.35705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.535867</td>\n",
-       "      <td>-0.565109</td>\n",
-       "      <td>-0.343362</td>\n",
-       "      <td>-1.131203</td>\n",
-       "      <td>-1.203615</td>\n",
-       "      <td>3.016194</td>\n",
-       "      <td>-1.144816</td>\n",
-       "      <td>-0.869795</td>\n",
-       "      <td>-1.445018</td>\n",
-       "      <td>-0.690324</td>\n",
-       "      <td>-0.218301</td>\n",
-       "      <td>1.175007</td>\n",
-       "      <td>1.148414</td>\n",
-       "      <td>-0.153782</td>\n",
-       "      <td>1.025588</td>\n",
-       "      <td>-0.986731</td>\n",
+       "      <td>1.535195</td>\n",
+       "      <td>-0.565583</td>\n",
+       "      <td>-0.343607</td>\n",
+       "      <td>-1.129922</td>\n",
+       "      <td>-1.202323</td>\n",
+       "      <td>3.014156</td>\n",
+       "      <td>-1.143591</td>\n",
+       "      <td>-0.870767</td>\n",
+       "      <td>-1.443710</td>\n",
+       "      <td>-0.690973</td>\n",
+       "      <td>-0.218447</td>\n",
+       "      <td>1.176138</td>\n",
+       "      <td>1.150344</td>\n",
+       "      <td>-0.153883</td>\n",
+       "      <td>1.024401</td>\n",
+       "      <td>-0.98573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1.123599</td>\n",
-       "      <td>1.730326</td>\n",
-       "      <td>-0.343362</td>\n",
-       "      <td>0.871624</td>\n",
-       "      <td>0.869131</td>\n",
-       "      <td>-0.547987</td>\n",
-       "      <td>1.461655</td>\n",
-       "      <td>1.010778</td>\n",
-       "      <td>-1.445018</td>\n",
-       "      <td>-0.690324</td>\n",
-       "      <td>1.343545</td>\n",
-       "      <td>-2.170328</td>\n",
-       "      <td>-0.380481</td>\n",
-       "      <td>-0.153782</td>\n",
-       "      <td>-0.614936</td>\n",
-       "      <td>0.356794</td>\n",
+       "      <td>-1.122654</td>\n",
+       "      <td>1.728860</td>\n",
+       "      <td>-0.343607</td>\n",
+       "      <td>0.872600</td>\n",
+       "      <td>0.870102</td>\n",
+       "      <td>-0.548440</td>\n",
+       "      <td>1.461807</td>\n",
+       "      <td>1.009515</td>\n",
+       "      <td>-1.443710</td>\n",
+       "      <td>-0.690973</td>\n",
+       "      <td>1.342454</td>\n",
+       "      <td>-2.168983</td>\n",
+       "      <td>-0.379043</td>\n",
+       "      <td>-0.153883</td>\n",
+       "      <td>-0.615475</td>\n",
+       "      <td>0.35705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-1.123599</td>\n",
-       "      <td>-0.565109</td>\n",
-       "      <td>-0.343362</td>\n",
-       "      <td>-1.131203</td>\n",
-       "      <td>-1.203615</td>\n",
-       "      <td>3.016194</td>\n",
-       "      <td>-0.275992</td>\n",
-       "      <td>-0.869795</td>\n",
-       "      <td>0.456703</td>\n",
-       "      <td>1.448594</td>\n",
-       "      <td>-0.218301</td>\n",
-       "      <td>1.011019</td>\n",
-       "      <td>1.188202</td>\n",
-       "      <td>-0.153782</td>\n",
-       "      <td>1.025588</td>\n",
-       "      <td>-0.986731</td>\n",
+       "      <td>-1.122654</td>\n",
+       "      <td>-0.565583</td>\n",
+       "      <td>-0.343607</td>\n",
+       "      <td>-1.129922</td>\n",
+       "      <td>-1.202323</td>\n",
+       "      <td>3.014156</td>\n",
+       "      <td>-0.275125</td>\n",
+       "      <td>-0.870767</td>\n",
+       "      <td>0.457054</td>\n",
+       "      <td>1.447235</td>\n",
+       "      <td>-0.218447</td>\n",
+       "      <td>1.012160</td>\n",
+       "      <td>1.190145</td>\n",
+       "      <td>-0.153883</td>\n",
+       "      <td>1.024401</td>\n",
+       "      <td>-0.98573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.535867</td>\n",
-       "      <td>1.156468</td>\n",
-       "      <td>-0.343362</td>\n",
-       "      <td>0.871624</td>\n",
-       "      <td>0.869131</td>\n",
-       "      <td>-0.547987</td>\n",
-       "      <td>0.592832</td>\n",
-       "      <td>-0.869795</td>\n",
-       "      <td>0.456703</td>\n",
-       "      <td>-0.690324</td>\n",
-       "      <td>1.343545</td>\n",
-       "      <td>1.850325</td>\n",
-       "      <td>0.399201</td>\n",
-       "      <td>-0.153782</td>\n",
-       "      <td>-0.614936</td>\n",
-       "      <td>0.356794</td>\n",
+       "      <td>1.535195</td>\n",
+       "      <td>1.155249</td>\n",
+       "      <td>-0.343607</td>\n",
+       "      <td>0.872600</td>\n",
+       "      <td>0.870102</td>\n",
+       "      <td>-0.548440</td>\n",
+       "      <td>0.593341</td>\n",
+       "      <td>-0.870767</td>\n",
+       "      <td>0.457054</td>\n",
+       "      <td>-0.690973</td>\n",
+       "      <td>1.342454</td>\n",
+       "      <td>1.851412</td>\n",
+       "      <td>0.400890</td>\n",
+       "      <td>-0.153883</td>\n",
+       "      <td>-0.615475</td>\n",
+       "      <td>0.35705</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -194,43 +194,43 @@
       ],
       "text/plain": [
        "       光線名稱  道路類別-第1當事者-名稱  速限-第1當事者  道路型態大類別名稱  事故位置大類別名稱  號誌-號誌種類名稱  \\\n",
-       "0  0.206134       1.156468 -0.343362   0.871624   0.178216  -0.547987   \n",
-       "1  1.535867      -0.565109 -0.343362  -1.131203  -1.203615   3.016194   \n",
-       "2 -1.123599       1.730326 -0.343362   0.871624   0.869131  -0.547987   \n",
-       "3 -1.123599      -0.565109 -0.343362  -1.131203  -1.203615   3.016194   \n",
-       "4  1.535867       1.156468 -0.343362   0.871624   0.869131  -0.547987   \n",
+       "0  0.206271       1.155249 -0.343607   0.872600   0.179294  -0.548440   \n",
+       "1  1.535195      -0.565583 -0.343607  -1.129922  -1.202323   3.014156   \n",
+       "2 -1.122654       1.728860 -0.343607   0.872600   0.870102  -0.548440   \n",
+       "3 -1.122654      -0.565583 -0.343607  -1.129922  -1.202323   3.014156   \n",
+       "4  1.535195       1.155249 -0.343607   0.872600   0.870102  -0.548440   \n",
        "\n",
        "   車道劃分設施-分向設施大類別名稱  車道劃分設施-分道設施-快車道或一般車道間名稱  車道劃分設施-分道設施-快慢車道間名稱  \\\n",
-       "0         -1.144816                 1.637635            -1.445018   \n",
-       "1         -1.144816                -0.869795            -1.445018   \n",
-       "2          1.461655                 1.010778            -1.445018   \n",
-       "3         -0.275992                -0.869795             0.456703   \n",
-       "4          0.592832                -0.869795             0.456703   \n",
+       "0         -1.143591                 1.636276            -1.443710   \n",
+       "1         -1.143591                -0.870767            -1.443710   \n",
+       "2          1.461807                 1.009515            -1.443710   \n",
+       "3         -0.275125                -0.870767             0.457054   \n",
+       "4          0.593341                -0.870767             0.457054   \n",
        "\n",
        "   車道劃分設施-分道設施-路面邊線名稱  事故類型及型態大類別名稱        經度        緯度        死亡        受傷  \\\n",
-       "0           -0.690324      1.343545 -0.460481 -1.554677 -0.153782 -0.614936   \n",
-       "1           -0.690324     -0.218301  1.175007  1.148414 -0.153782  1.025588   \n",
-       "2           -0.690324      1.343545 -2.170328 -0.380481 -0.153782 -0.614936   \n",
-       "3            1.448594     -0.218301  1.011019  1.188202 -0.153782  1.025588   \n",
-       "4           -0.690324      1.343545  1.850325  0.399201 -0.153782 -0.614936   \n",
+       "0           -0.690973      1.342454 -0.459246 -1.553617 -0.153883 -0.615475   \n",
+       "1           -0.690973     -0.218447  1.176138  1.150344 -0.153883  1.024401   \n",
+       "2           -0.690973      1.342454 -2.168983 -0.379043 -0.153883 -0.615475   \n",
+       "3            1.447235     -0.218447  1.012160  1.190145 -0.153883  1.024401   \n",
+       "4           -0.690973      1.342454  1.851412  0.400890 -0.153883 -0.615475   \n",
        "\n",
-       "      color  \n",
-       "0  0.356794  \n",
-       "1 -0.986731  \n",
-       "2  0.356794  \n",
-       "3 -0.986731  \n",
-       "4  0.356794  "
+       "     color  \n",
+       "0  0.35705  \n",
+       "1 -0.98573  \n",
+       "2  0.35705  \n",
+       "3 -0.98573  \n",
+       "4  0.35705  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def preprocess(input_data, select_lst, sample = 592):\n",
-    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)#.sample(sample).reset_index(drop=True)\n",
-    "    # sample_data = sample_data[sample_data['發生月份'] < 3]\n",
+    "def preprocess(input_data, select_lst):\n",
+    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
+    "    sample_data = sample_data[sample_data['發生月份'] < 7]\n",
     "    dataA = sample_data[select_lst]\n",
     "    \n",
     "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
@@ -249,7 +249,7 @@
     "    '死亡受傷人數', '經度', '緯度',\n",
     "]\n",
     "\n",
-    "dist_dfA1 = preprocess(dataA1, select_lst, sample = 592)\n",
+    "dist_dfA1 = preprocess(dataA1, select_lst)\n",
     "\n",
     "rbind_data = pd.concat([dist_dfA1[0]], axis=0, ignore_index=True)\n",
     "\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "id": "6530f03f-35e3-42cf-8a24-7b26c93fc758",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.071075201034546\n"
+      "1.0812897682189941\n"
      ]
     }
    ],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "id": "b9805bcc-b960-4a9f-8e68-63571132cefc",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "id": "509cbc33-5516-4a6d-ba2a-7488b875c9ac",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "id": "5c944a6a-7151-4843-8785-16d47ab37026",
    "metadata": {},
    "outputs": [
@@ -427,9 +427,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "單路部分、低速線 369\n",
+      "單路部分、低速線 368\n",
       "交岔路、低速限 309\n",
-      "單路部分、高速限 78\n"
+      "單路部分、高速限 80\n"
      ]
     }
    ],
