--- a/Version2/道路分析_V2.ipynb
+++ b/Version2/道路分析_V2.ipynb
@@ -5,7 +5,17 @@
    "execution_count": 1,
    "id": "f86ea7dc-6799-42a5-8e84-aa0f6422f5f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(24452) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(24453) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(24454) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -205,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "94276c2d-c9c8-4ab1-8aca-15533a004ea6",
    "metadata": {
     "tags": []
@@ -272,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "db92e887-d74c-43ac-9f5c-e72b066bdc97",
    "metadata": {},
    "outputs": [],
@@ -305,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "03afc0b6-e649-43c7-9805-d2a709913430",
    "metadata": {},
    "outputs": [],
@@ -340,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "id": "eeaebfc3-9ae4-4b1c-bd58-f97e868a8837",
    "metadata": {},
    "outputs": [
@@ -1996,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "0783da52-2c60-42c9-bb9b-089c7bb9efb2",
    "metadata": {},
    "outputs": [],
@@ -2016,10 +2026,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "a83bc835-ef04-444a-a7b1-6c2ab0fada68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "路面狀況-路面狀態名稱 \n",
+      "      車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "乾燥  0.890932  0.830075  0.872465\n",
+      "濕潤  0.106569  0.168694  0.126521\n",
+      "泥濘  0.001142  0.000410  0.000254\n",
+      "油滑  0.001035  0.000410  0.000254\n",
+      "冰雪  0.000322  0.000410  0.000507\n",
+      "當事者屬-性-別名稱 \n",
+      "               車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "男            0.625293  0.632262  0.765213\n",
+      "女            0.364325  0.354340  0.222617\n",
+      "肇事逃逸尚未查獲     0.006175  0.013397  0.008367\n",
+      "無或物(動物、堆置物)  0.004196  0.000000  0.003803\n",
+      "無人駕駛自動車      0.000011  0.000000  0.000000\n",
+      "當事者事故發生時年齡 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "3  0.291715  0.322288  0.299461\n",
+      "1  0.275516  0.190980  0.271491\n",
+      "2  0.255873  0.231129  0.321273\n",
+      "4  0.148604  0.191668  0.097768\n",
+      "0  0.028292  0.063935  0.010008\n",
+      "車輛撞擊部位大類別名稱-最初 \n",
+      "          車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "機車與自行車  0.579238  0.361611  0.237631\n",
+      "汽車      0.341510  0.337254  0.719303\n",
+      "其他      0.079252  0.301135  0.043066\n",
+      "光線名稱 \n",
+      "             車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "有照明未開啟或故障  0.435039  0.370745  0.444980\n",
+      "有照明且開啟     0.321470  0.388517  0.281187\n",
+      "無照明        0.243490  0.240738  0.273834\n",
+      "道路類別-第1當事者-名稱 \n",
+      "          車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "市區道路    0.801089  0.803281  0.299949\n",
+      "村里道路    0.103962  0.097744  0.097110\n",
+      "其他      0.032225  0.043746  0.048174\n",
+      "縣道      0.024551  0.020369  0.027637\n",
+      "省道      0.017274  0.013671  0.140974\n",
+      "鄉道      0.016618  0.015995  0.007099\n",
+      "專用道路    0.002641  0.003144  0.005071\n",
+      "國道      0.001425  0.002051  0.343813\n",
+      "快速(公)道  0.000215  0.000000  0.030172\n",
+      "道路型態大類別名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "交岔路   0.611400  0.435680  0.300710\n",
+      "單路部分  0.379722  0.544087  0.694219\n",
+      "圓環廣場  0.005208  0.013671  0.001014\n",
+      "其他    0.003641  0.006562  0.004057\n",
+      "平交道   0.000028  0.000000  0.000000\n",
+      "事故位置大類別名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "交叉路口  0.580737  0.333014  0.272312\n",
+      "路段    0.407728  0.542174  0.703854\n",
+      "其他    0.009754  0.124129  0.009888\n",
+      "交流道   0.001781  0.000684  0.013945\n",
+      "號誌-號誌種類名稱 \n",
+      "                    車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "無號誌               0.585220  0.673684  0.695233\n",
+      "行車管制號誌            0.265503  0.167738  0.258367\n",
+      "行車管制號誌(附設行人專用號誌)  0.098036  0.114149  0.024087\n",
+      "閃光號誌              0.051240  0.044429  0.022312\n",
+      "車道劃分設施-分向設施大類別名稱 \n",
+      "           車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "無        0.361407  0.304170  0.145538\n",
+      "雙向禁止超車線  0.294567  0.365550  0.034483\n",
+      "中央分向島    0.192324  0.115926  0.775101\n",
+      "行車分向線    0.145539  0.204921  0.039807\n",
+      "單向禁止超車線  0.006163  0.009433  0.005071\n",
+      "車道劃分設施-分道設施-快車道或一般車道間名稱 \n",
+      "                車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "未繪設車道線        0.583920  0.596719  0.126521\n",
+      "車道線(無標記)      0.306249  0.308954  0.364351\n",
+      "車道線(附標記)      0.061565  0.061381  0.449544\n",
+      "禁止變換車道線(無標記)  0.036064  0.023377  0.027637\n",
+      "禁止變換車道線(附標記)  0.012202  0.009569  0.031947\n",
+      "車道劃分設施-分道設施-快慢車道間名稱 \n",
+      "                     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "未繪設快慢車道分隔線         0.809203  0.834176  0.671400\n",
+      "快慢車道分隔線            0.164080  0.154614  0.294118\n",
+      "寬式快慢車道分隔島(50公分以上)  0.020712  0.008749  0.029158\n",
+      "窄式快慢車道分隔島(無柵欄)     0.004744  0.002051  0.004057\n",
+      "窄式快慢車道分隔島(附柵欄)     0.001261  0.000410  0.001268\n",
+      "車道劃分設施-分道設施-路面邊線名稱 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "有  0.538198  0.577444  0.893763\n",
+      "無  0.461802  0.422556  0.106237\n",
+      "事故類型及型態大類別名稱 \n",
+      "        車與車、低速線  人與車、低速限   車與車、高速限\n",
+      "車與車   0.885425      0.0  0.844067\n",
+      "車輛本身  0.114440      0.0  0.155680\n",
+      "人與車   0.000136      1.0  0.000254\n",
+      "保護裝備名稱 \n",
+      "                         車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "戴半罩式安全帽                0.328429  0.198005  0.129107\n",
+      "繫安全帶(使用幼童安全椅)          0.291683  0.297631  0.650154\n",
+      "戴非半罩式安全帽               0.199923  0.114729  0.096253\n",
+      "不明                     0.154864  0.139809  0.111653\n",
+      "未戴安全帽或未繫安全帶(未使用幼童安全椅)  0.013153  0.008729  0.010524\n",
+      "其他(無需使用保護裝備之人)         0.011948  0.241097  0.002310\n",
+      "行動電話或電腦或其他相類功能裝置名稱 \n",
+      "                車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "未使用           0.838714  0.622004  0.873717\n",
+      "不明            0.158361  0.139393  0.118840\n",
+      "使用手持或有礙駕駛安全   0.002126  0.002078  0.005390\n",
+      "使用免持或未有礙駕駛安全  0.000709  0.000554  0.002053\n",
+      "非駕駛人          0.000091  0.235971  0.000000\n",
+      "當事者行動狀態大類別名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "車的狀態  0.995416  0.761345  0.995131\n",
+      "不明    0.004493  0.005811  0.004869\n",
+      "人的狀態  0.000091  0.232844  0.000000\n",
+      "車輛撞擊部位大類別名稱-其他 \n",
+      "          車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "機車與自行車  0.598168  0.421053  0.182891\n",
+      "汽車      0.322481  0.326625  0.777286\n",
+      "其他      0.079351  0.252322  0.039823\n",
+      "肇因研判大類別名稱-個別 \n",
+      "               車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "駕駛者          0.793953  0.540764  0.793349\n",
+      "其他           0.141484  0.161540  0.148769\n",
+      "無(車輛駕駛者因素)   0.051983  0.055732  0.037065\n",
+      "機件           0.003065  0.001655  0.011424\n",
+      "燈光           0.002753  0.000414  0.001015\n",
+      "裝載           0.002401  0.004690  0.004570\n",
+      "無(物或動物)      0.002106  0.000000  0.002793\n",
+      "無(非車輛駕駛人因素)  0.001907  0.007311  0.000762\n",
+      "交通管制(設施)     0.000199  0.000138  0.000254\n",
+      "非駕駛者         0.000148  0.227756  0.000000\n",
+      "肇事逃逸類別名稱-是否肇逃 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "否  0.983359  0.963773  0.976927\n",
+      "是  0.016641  0.036227  0.023073\n",
+      "路面狀況-路面鋪裝名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "柏油    0.990546  0.979631  0.995943\n",
+      "水泥    0.003902  0.006425  0.003296\n",
+      "其他鋪裝  0.002889  0.011620  0.000507\n",
+      "無鋪裝   0.002403  0.001914  0.000254\n",
+      "碎石    0.000260  0.000410  0.000000\n",
+      "道路障礙-障礙物名稱 \n",
+      "            車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "無障礙物      0.983506  0.977444  0.974391\n",
+      "路上有停車     0.006293  0.010526  0.003043\n",
+      "其他障礙物     0.004880  0.004238  0.011156\n",
+      "道路工事(程)中  0.004744  0.005332  0.011156\n",
+      "攤位、棚架     0.000390  0.002051  0.000000\n",
+      "有堆積物      0.000187  0.000410  0.000254\n",
+      "死亡 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "0  0.996647  0.988107  0.981744\n",
+      "1  0.003285  0.011757  0.016734\n",
+      "2  0.000068  0.000137  0.001268\n",
+      "3  0.000000  0.000000  0.000254\n"
+     ]
+    }
+   ],
    "source": [
     "table_lst = [\n",
     "    '路面狀況-路面狀態名稱',\n",
@@ -2043,9 +2213,9 @@
     "    '道路障礙-障礙物名稱',\n",
     "    '死亡'\n",
     "]\n",
-    "# for i in table_lst:\n",
-    "#     result = table(i, full_0, full_1, full_2)\n",
-    "#     print(i,'\\n',result)"
+    "for i in table_lst:\n",
+    "    result = table(i, full_0, full_1, full_2)\n",
+    "    print(i,'\\n',result)"
    ]
   },
   {
