--- a/Version2/道路分析_V2.ipynb
+++ b/Version2/道路分析_V2.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "00a8edb3-600c-4782-ad38-55d0c5fcf445",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a55ceb49-6238-4d71-b524-8b21abe7da4b",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "(190002, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,18 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "141ae2b8-f7b9-4044-9fa1-b8810326f7c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2219.301990747452\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -205,24 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "94276c2d-c9c8-4ab1-8aca-15533a004ea6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def preprocess(input_data, select_lst):\n",
-    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
-    "    sample_data = sample_data[sample_data['發生月份'] < 7]\n",
-    "    dataA = sample_data[select_lst]\n",
-    "    \n",
-    "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
-    "    dist_df = pd.concat([dataA, death_injury_data], axis=1)\n",
-    "    dist_df.drop(columns=['死亡受傷人數'], inplace=True)\n",
-    "    \n",
-    "    return dist_df, sample_data\n",
-    "\n",
     "# List of columns to select\n",
     "select_lst = [\n",
     "    '天候名稱', \n",
@@ -272,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "db92e887-d74c-43ac-9f5c-e72b066bdc97",
    "metadata": {},
    "outputs": [],
@@ -294,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1c9fcaec-1867-467a-906c-f53a48cb11eb",
    "metadata": {},
    "outputs": [],
@@ -305,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "03afc0b6-e649-43c7-9805-d2a709913430",
    "metadata": {},
    "outputs": [],
@@ -340,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eeaebfc3-9ae4-4b1c-bd58-f97e868a8837",
    "metadata": {},
    "outputs": [
@@ -365,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4e1b7d8f-059a-48cc-83db-f9be90f7fe7f",
    "metadata": {},
    "outputs": [
@@ -388,7 +369,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "808fc784-1f28-4ca9-bfd3-bf8d5b44ac0f",
    "metadata": {
     "tags": []
@@ -504,6 +485,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1287481e-1196-4b5c-b117-2eea162a82f6",
+   "metadata": {},
+   "source": [
+    "# Grid Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "79139d98-b35c-4392-becf-bc5c2527cc32",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "特徵: 號誌-號誌動作名稱\n",
+      "Scores: 0.6984126984126984, 0.8, 0.6739130434782609\n",
+      "Elapsed Time: 214.8835220336914 seconds\n",
+      "\n",
+      "特徵: 當事者區分-類別-大類別名稱-車種\n",
+      "Scores: 0.6851851851851852, 0.775, 0.6521739130434783\n",
+      "Elapsed Time: 213.13924312591553 seconds\n",
+      "\n",
+      "特徵: 道路障礙-視距名稱\n",
+      "Scores: 0.6825396825396826, 0.775, 0.6739130434782609\n",
+      "Elapsed Time: 218.30002093315125 seconds\n",
+      "\n",
+      "特徵: 車道劃分設施-分道設施-快慢車道間名稱\n",
+      "Scores: 0.6851851851851852, 0.775, 0.717391304347826\n",
+      "Elapsed Time: 215.9185438156128 seconds\n",
+      "\n",
+      "特徵: 車輛撞擊部位大類別名稱-其他\n",
+      "Scores: 0.6798941798941799, 0.775, 0.6739130434782609\n",
+      "Elapsed Time: 221.6541588306427 seconds\n",
+      "\n",
+      "特徵: 道路型態子類別名稱\n",
+      "Scores: 0.6878306878306878, 0.775, 0.6739130434782609\n",
+      "Elapsed Time: 228.42386984825134 seconds\n",
+      "\n",
+      "特徵: 路面狀況-路面缺陷名稱\n",
+      "Scores: 0.6851851851851852, 0.775, 0.6739130434782609\n",
+      "Elapsed Time: 218.22261309623718 seconds\n",
+      "\n",
+      "特徵: 天候名稱\n",
+      "Scores: 0.6798941798941799, 0.775, 0.6521739130434783\n",
+      "Elapsed Time: 213.59662508964539 seconds\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_logit = [\n",
+    "    '路面狀況-路面狀態名稱', '當事者屬-性-別名稱', '當事者事故發生時年齡', \n",
+    "    '車輛撞擊部位大類別名稱-最初', \n",
+    "    '光線名稱', '道路類別-第1當事者-名稱',\n",
+    "    '速限-第1當事者', '道路型態大類別名稱', '事故位置大類別名稱', \n",
+    "    '號誌-號誌種類名稱', '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
+    "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '事故類型及型態大類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', \n",
+    "    '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初', '肇因研判子類別名稱-個別',\n",
+    "    '當事者區分-類別-子類別名稱-車種', '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', \n",
+    "    '當事者行動狀態大類別名稱', '車輛撞擊部位大類別名稱-其他',\n",
+    "    '肇因研判大類別名稱-個別', '肇事逃逸類別名稱-是否肇逃', '路面狀況-路面鋪裝名稱',\n",
+    "    '車道劃分設施-分向設施子類別名稱', '道路障礙-障礙物名稱', '車輛撞擊部位子類別名稱-其他',\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "optional_features = [\n",
+    "    '號誌-號誌動作名稱', '當事者區分-類別-大類別名稱-車種', #'肇因研判大類別名稱-主要', # 降低預測值\n",
+    "    '道路障礙-視距名稱', '車道劃分設施-分道設施-快慢車道間名稱', '車輛撞擊部位大類別名稱-其他', # 降低預測值\n",
+    "    '道路型態子類別名稱', '路面狀況-路面缺陷名稱', '天候名稱' # 降低\n",
+    "]\n",
+    "\n",
+    "for i in range(len(optional_features)):\n",
+    "    # 每次迴圈加入一個新特徵\n",
+    "    current_lst_logit = lst_logit + [optional_features[i]]\n",
+    "\n",
+    "    # 重新生成資料\n",
+    "    full_combine_X, full_combine_y = get_clusterN_logit(full_combine, current_lst_logit)\n",
+    "    full_0_X, full_0_y = get_clusterN_logit(full_0, current_lst_logit)\n",
+    "    full_1_X, full_1_y = get_clusterN_logit(full_1, current_lst_logit)\n",
+    "    full_2_X, full_2_y = get_clusterN_logit(full_2, current_lst_logit)\n",
+    "    full_out_X, full_out_y = get_clusterN_logit(full_out, current_lst_logit)\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    matrix_0, score_0, cm_0 = logistic_cm_gridsearch(full_0_X, full_0_y)\n",
+    "    matrix_1, score_1, cm_1 = logistic_cm_gridsearch(full_1_X, full_1_y)\n",
+    "    matrix_2, score_2, cm_2 = logistic_cm_gridsearch(full_2_X, full_2_y)\n",
+    "    \n",
+    "    # 輸出結果\n",
+    "    print(f\"特徵: {optional_features[i]}\")\n",
+    "    print(f\"Scores: {score_0}, {score_1}, {score_2}\")\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    print(f\"Elapsed Time: {elapsed_time} seconds\\n\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 143,
    "id": "3806a01c-a874-4421-b566-75195d1ee821",
@@ -515,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ebf19c17-456d-4050-955a-38b13fdb7ee5",
    "metadata": {
     "tags": []
@@ -526,7 +615,7 @@
      "output_type": "stream",
      "text": [
       "0.6 0.75\n",
-      "24.74073100090027\n"
+      "25.610748767852783\n"
      ]
     }
    ],
@@ -542,18 +631,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "378e8049-9717-400a-9a07-3d6563d91641",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 21,
+   "id": "bd58c06d-a799-41c8-8ba6-97fa5182bed3",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "0.6984126984126984 0.8 0.6521739130434783\n",
-      "206.84524488449097\n"
+      "202.27635097503662\n"
      ]
     }
    ],
@@ -570,31 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "5b90f08b-1ac6-4efd-bc99-7cd96e7ab1e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Label  Precision  Recall  F1 Score\n",
-      "0  Class_0   1.000000     0.2  0.333333\n",
-      "1  Class_1   0.555556     1.0  0.714286\n",
-      "     Label  Precision  Recall  F1 Score\n",
-      "0  Class_0       0.75    0.75      0.75\n",
-      "1  Class_1       0.75    0.75      0.75\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(matrix_combine)\n",
-    "print(matrix_out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "287c0acb-bb03-49f0-827b-b14744231e24",
    "metadata": {},
    "outputs": [
@@ -612,12 +675,20 @@
       "\n",
       "      Label  Precision    Recall  F1 Score\n",
       "0  Class_0   0.705882  0.521739  0.600000\n",
-      "1  Class_1   0.620690  0.782609  0.692308\n"
+      "1  Class_1   0.620690  0.782609  0.692308 \n",
+      "\n",
+      "      Label  Precision  Recall  F1 Score\n",
+      "0  Class_0   1.000000     0.2  0.333333\n",
+      "1  Class_1   0.555556     1.0  0.714286 \n",
+      "\n",
+      "      Label  Precision  Recall  F1 Score\n",
+      "0  Class_0       0.75    0.75      0.75\n",
+      "1  Class_1       0.75    0.75      0.75\n"
      ]
     }
    ],
    "source": [
-    "print(matrix_0, '\\n\\n', matrix_1, '\\n\\n', matrix_2)"
+    "print(matrix_0, '\\n\\n', matrix_1, '\\n\\n', matrix_2, '\\n\\n', matrix_combine, '\\n\\n', matrix_out)"
    ]
   },
   {
@@ -1442,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "id": "bc6ec643-39d4-4877-bc72-ab9169eef8a1",
    "metadata": {},
    "outputs": [],
@@ -1464,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "id": "25e3269e-94b5-4d2c-8499-9a6cbb207fff",
    "metadata": {},
    "outputs": [],
@@ -1501,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "id": "5fa3772c-7eca-4f5a-9801-48a1d2df7886",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "id": "e078385c-7a23-4830-81d2-f5eafe7425db",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "id": "75777399-32a5-469a-92cb-5646733dcdff",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "id": "8b50145e-1e4c-4fac-a82f-c95da44a196f",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 30,
    "id": "5acd9921-e96b-4b8e-bd5d-95dc402475fc",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 31,
    "id": "aaf72237-a888-47cc-9f87-89ad0f5c7469",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1779,7 @@
        "1  Class_1   0.680297  0.759336  0.717647"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "id": "005776a9-bc5a-4151-aa9b-3c85849bed03",
    "metadata": {},
    "outputs": [],
@@ -1755,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 33,
    "id": "c16741be-ad26-4f2e-91a5-68eee1898132",
    "metadata": {},
    "outputs": [
@@ -1780,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 34,
    "id": "8d33e139-1928-4573-8f7b-f6b50068a402",
    "metadata": {},
    "outputs": [
