--- a/Version2/道路分析_V2.ipynb
+++ b/Version2/道路分析_V2.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "00a8edb3-600c-4782-ad38-55d0c5fcf445",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a55ceb49-6238-4d71-b524-8b21abe7da4b",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "(190002, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,6 +113,28 @@
     "X1 = full_dist.drop(['受傷', '死亡', '經度', '緯度'], axis=1).to_numpy()\n",
     "\n",
     "full_dist.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a5d8c36a-1c27-4fe4-88c7-4d722eaaea72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(189216, 15)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_dfA1[0].shape\n",
+    "dist_dfA2[0].shape"
    ]
   },
   {
@@ -499,8 +521,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "tags": []
    },
