--- a/Version2/Stable_V2.ipynb
+++ b/Version2/Stable_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8efac998-d62a-4ee8-bbdb-aa19562e2cb8",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0e172d63-8c13-485a-896b-7a4da115f35d",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "7f6e308f-5a50-45cd-8f5a-0c14c9a36ad8",
    "metadata": {},
    "outputs": [],
@@ -114,13 +114,14 @@
     "    '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
     "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
     "    '事故類型及型態大類別名稱',\n",
+    "    # '路面狀況-路面狀態名稱',\n",
     "    '死亡受傷人數', '經度', '緯度',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "e8cd8dff-91d5-4e8b-88a1-0fc14fc6583d",
    "metadata": {},
    "outputs": [],
@@ -199,7 +200,7 @@
     "\n",
     "    mapper_plot1 = MapperLayoutInteractive(\n",
     "        mapper_graph1,\n",
-    "        colors = dist_df[['速限-第1當事者']].to_numpy(),\n",
+    "        colors = dist_df[['路面狀況-路面狀態名稱']].to_numpy(),\n",
     "        cmap = 'jet',\n",
     "        # agg = np.nanmean,\n",
     "        agg = most_frequent_nonan,\n",
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "773f8467-0d1d-41d5-ae55-99021833b3ea",
    "metadata": {
     "jupyter": {
@@ -247,10 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "143d9fbd-3cb8-48ab-96f6-dfc45f29d226",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1345.5258399676507\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "mapper_plot1 = resample_plot(dataA1, dataA2, select_lst)\n",
     "full_info = get_full_info(mapper_plot1)\n",
