--- a/Version2/離群值比較_V2.ipynb
+++ b/Version2/離群值比較_V2.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "e93a21c2-5c23-4f0a-87b4-2deb8a8d99ef",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
+   "id": "b4d4e603-241b-43e0-ad31-4efb97336b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in dist_dfA2[0].columns:\n",
+    "#     print(dist_dfA2[0][i].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf8a077-551a-428e-8fd9-98a4638a8e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "import time\n",
+    "\n",
+    "select_lst_new = [\n",
+    "    '光線名稱',\n",
+    "    '道路類別-第1當事者-名稱',\n",
+    "    '速限-第1當事者',\n",
+    "    '道路型態大類別名稱', \n",
+    "    '事故位置大類別名稱',\n",
+    "    '號誌-號誌種類名稱',\n",
+    "    '車道劃分設施-分向設施大類別名稱', \n",
+    "    '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
+    "    '車道劃分設施-分道設施-快慢車道間名稱', \n",
+    "    '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '事故類型及型態大類別名稱',\n",
+    "]\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Apply PCA\n",
+    "lens1 = PCA(10)\n",
+    "lens_result = lens1.fit_transform(X1[select_lst_new].to_numpy())\n",
+    "\n",
+    "# Calculate Hamming distance\n",
+    "hamming_dist = pairwise_distances(lens_result, metric='hamming')\n",
+    "\n",
+    "# Perform Agglomerative Clustering using precomputed distance matrix\n",
+    "clustering = AgglomerativeClustering(n_clusters=None, distance_threshold=0.1, affinity='precomputed', linkage='average').fit(hamming_dist)\n",
+    "labels = clustering.labels_\n",
+    "\n",
+    "n_clusters_ = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "n_noise_ = list(labels).count(-1)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(elapsed_time)\n",
+    "\n",
+    "n_clusters_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "a1c72209-b975-46aa-ad4e-19387bb2278c",
    "metadata": {},
    "outputs": [],
@@ -365,6 +425,70 @@
     "print(elapsed_time)\n",
     "\n",
     "n_clusters_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3710fa50-192e-4c02-bfda-d05d444e4eab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rbind_data['label'] = labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5b10b181-a06c-4531-9bde-ec7d7ef28a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    176937\n",
+      "Name: 速限-第1當事者, dtype: int64\n",
+      "0    8831\n",
+      "Name: 速限-第1當事者, dtype: int64\n",
+      "1    4090\n",
+      "Name: 速限-第1當事者, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rbind_data[rbind_data['label'] == 0]['速限-第1當事者'].value_counts())\n",
+    "print(rbind_data[rbind_data['label'] == 1]['速限-第1當事者'].value_counts())\n",
+    "print(rbind_data[rbind_data['label'] == 2]['速限-第1當事者'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "cf821897-847b-447e-a50d-cfbe23c1e2bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "車與車      156667\n",
+      "車輛本身      20268\n",
+      "平交道事故         1\n",
+      "人與車           1\n",
+      "Name: 事故類型及型態大類別名稱, dtype: int64\n",
+      "人與車    8831\n",
+      "Name: 事故類型及型態大類別名稱, dtype: int64\n",
+      "車與車     3388\n",
+      "車輛本身     702\n",
+      "Name: 事故類型及型態大類別名稱, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rbind_data[rbind_data['label'] == 0]['事故類型及型態大類別名稱'].value_counts())\n",
+    "print(rbind_data[rbind_data['label'] == 1]['事故類型及型態大類別名稱'].value_counts())\n",
+    "print(rbind_data[rbind_data['label'] == 2]['事故類型及型態大類別名稱'].value_counts())"
    ]
   },
   {
@@ -735,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "89d8bca0-b9ee-4b5a-ac83-744f38180dc7",
    "metadata": {},
    "outputs": [],
