--- a/Version2/道路分析_V2.ipynb
+++ b/Version2/道路分析_V2.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "a55ceb49-6238-4d71-b524-8b21abe7da4b",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "(190002, 15)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "94276c2d-c9c8-4ab1-8aca-15533a004ea6",
    "metadata": {
     "tags": []
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "db92e887-d74c-43ac-9f5c-e72b066bdc97",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "03afc0b6-e649-43c7-9805-d2a709913430",
    "metadata": {},
    "outputs": [],
@@ -346,24 +346,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "eeaebfc3-9ae4-4b1c-bd58-f97e868a8837",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# calinski_data = get_calinski_from_db(full_info, 0.03)\n",
-    "# labels = calinski_data[3]\n",
-    "# db = calinski_data[2]\n",
-    "# n_clusters_ = calinski_data[4]\n",
+    "calinski_data = get_calinski_from_db(full_info, 0.025)\n",
+    "labels = calinski_data[3]\n",
+    "db = calinski_data[2]\n",
+    "n_clusters_ = calinski_data[4]\n",
     "\n",
-    "# print(n_clusters_)\n",
+    "print(n_clusters_)\n",
     "\n",
     "# do_plot(full_info, calinski_data, labels, db, n_clusters_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "4e1b7d8f-059a-48cc-83db-f9be90f7fe7f",
    "metadata": {},
    "outputs": [
@@ -371,13 +379,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01連接點數量 315\n",
-      "02連接點數量 414\n",
+      "01連接點數量 1499\n",
+      "02連接點數量 0\n",
       "12連接點數量 0\n",
-      "o0連接點數量 1143\n",
-      "o1連接點數量 1520\n",
-      "o2連接點數量 1873\n",
-      "離群值數量 6420\n"
+      "o0連接點數量 85\n",
+      "o1連接點數量 24\n",
+      "o2連接點數量 162\n",
+      "離群值數量 391\n"
      ]
     },
     {
@@ -386,7 +394,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "808fc784-1f28-4ca9-bfd3-bf8d5b44ac0f",
    "metadata": {
     "tags": []
@@ -450,20 +458,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2    728\n",
-      "1      1\n",
+      "2    1478\n",
+      "1      21\n",
       "dtype: int64\n",
-      "2    6387\n",
-      "1      33\n",
+      "2    378\n",
+      "1     13\n",
       "dtype: int64\n",
-      "2    80465\n",
-      "1      322\n",
+      "2    176259\n",
+      "1       594\n",
       "dtype: int64\n",
-      "2    42811\n",
-      "1      159\n",
+      "2    7228\n",
+      "1      87\n",
       "dtype: int64\n",
-      "2    59210\n",
-      "1      272\n",
+      "2    3872\n",
+      "1      72\n",
       "dtype: int64\n"
      ]
     }
