--- a/Version2/Stable_V2.ipynb
+++ b/Version2/Stable_V2.ipynb
@@ -193,7 +193,7 @@
     "            overlap_frac = 0.5\n",
     "        ),\n",
     "        clustering = FailSafeClustering(\n",
-    "            clustering = AgglomerativeClustering(3, metric='euclidean', linkage='ward'),\n",
+    "            clustering = AgglomerativeClustering(3, linkage='ward'),\n",
     "            verbose = False)\n",
     "    )\n",
     "    mapper_graph1 = mapper_algo1.fit_transform(X1, lens1)\n",
@@ -207,8 +207,8 @@
     "        dim = 3,\n",
     "        iterations = 30,\n",
     "        seed = 6,\n",
-    "        width = 800,\n",
-    "        height = 500)\n",
+    "        width = 300,\n",
+    "        height = 300)\n",
     "    \n",
     "    return mapper_plot1"
    ]
@@ -263,18 +263,18 @@
    ],
    "source": [
     "mapper_plot1 = resample_plot(dataA1, dataA2, select_lst)\n",
-    "full_info = get_full_info(mapper_plot1)\n",
-    "calinski_data = get_calinski_from_db(full_info, 0.1)\n",
-    "print(calinski_data[0])\n",
+    "# full_info = get_full_info(mapper_plot1)\n",
+    "# calinski_data = get_calinski_from_db(full_info, 0.1)\n",
+    "# print(calinski_data[0])\n",
     "\n",
-    "labels = calinski_data[3]\n",
-    "db = calinski_data[2]\n",
-    "n_clusters_ = calinski_data[4]\n",
+    "# labels = calinski_data[3]\n",
+    "# db = calinski_data[2]\n",
+    "# n_clusters_ = calinski_data[4]\n",
     "\n",
     "print(n_clusters_)\n",
     "\n",
-    "# fig_mean1 = mapper_plot1.plot()\n",
-    "# fig_mean1.show(config={'scrollZoom': True})"
+    "fig_mean1 = mapper_plot1.plot()\n",
+    "fig_mean1.show(config={'scrollZoom': True})"
    ]
   },
   {
