--- a/Version2/道路分析_V2.ipynb
+++ b/Version2/道路分析_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f86ea7dc-6799-42a5-8e84-aa0f6422f5f9",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "current_dir_path = os.path.dirname(current_file_path)\n",
     "parent_dir_path = os.path.dirname(current_dir_path)\n",
     "\n",
-    "os.chdir(current_dir_path)\n",
+    "os.chdir(current_dir_path + '\\\\ultils')\n",
     "\n",
     "import pickle\n",
     "import time\n",
@@ -43,26 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "00a8edb3-600c-4782-ad38-55d0c5fcf445",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(\"./Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
-    "data2 = pd.read_csv(\"./Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
-    "data3 = pd.read_csv(\"./Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
-    "data4 = pd.read_csv(\"./Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
-    "data5 = pd.read_csv(\"./Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
-    "data6 = pd.read_csv(\"./Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "data1 = pd.read_csv(\"../Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"../Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"../Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"../Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"../Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "data6 = pd.read_csv(\"../Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
     "\n",
     "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6], ignore_index=True)\n",
     "\n",
-    "dataA1 = pd.read_csv(\"./Data/NPA_TMA1_new.csv\")[:-2]"
+    "dataA1 = pd.read_csv(\"../Data/NPA_TMA1_new.csv\")[:-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "a55ceb49-6238-4d71-b524-8b21abe7da4b",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "(190002, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +112,27 @@
     "X1 = full_dist.drop(['受傷', '死亡', '經度', '緯度'], axis=1).to_numpy()\n",
     "\n",
     "full_dist.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2d4defff-ee0d-4e2a-b147-18f979c25398",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(189216, 15)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_dfA2[0].shape"
    ]
   },
   {
@@ -2279,7 +2300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
