--- a/Version2/離群值比較_V2.ipynb
+++ b/Version2/離群值比較_V2.ipynb
@@ -57,6 +57,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "fa21e90f-c713-45bd-98d1-b7a282664c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['無遮蔽物', '有遮蔽物'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataA2['道路障礙-視距品質名稱'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c315df56-bb3b-47e2-b998-52cd0b7c4a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['良好', '路上停放車輛', '建築物', '彎道', '樹木、農作物', '坡道'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataA2['道路障礙-視距名稱'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "e93a21c2-5c23-4f0a-87b4-2deb8a8d99ef",
    "metadata": {},
@@ -1128,7 +1170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
